--- a/GlazeWM.Bootstrapper/sample-config.yaml
+++ b/GlazeWM.Bootstrapper/sample-config.yaml
@@ -21,15 +21,15 @@ bar:
       time_formatting: "hh:mm tt  ddd MMM d"
 
 workspaces:
-  - name: 1
-  - name: 2
-  - name: 3
-  - name: 4
-  - name: 5
-  - name: 6
-  - name: 7
-  - name: 8
-  - name: 9
+  - name: "1"
+  - name: "2"
+  - name: "3"
+  - name: "4"
+  - name: "5"
+  - name: "6"
+  - name: "7"
+  - name: "8"
+  - name: "9"
 
 window_rules:
   # Task Manager requires admin privileges to manage and should be ignored unless running
