--- a/GlazeWM.Bootstrapper/sample-config.yaml
+++ b/GlazeWM.Bootstrapper/sample-config.yaml
@@ -54,6 +54,10 @@ window_rules:
   - command: "resize borders 0px -7px -7px -7px"
     match_process_name: "steam"
 
+  - command: "force manage"
+    match_process_name: "Flow.Launcher"
+    match_title: "Flow.Launcher"
+
 binding_modes:
   - name: "resize"
     keybindings:
